2011-07-10  Csaba Nemethi <csaba.nemethi@t-online.de>

	* *.tcl:              Bumped the version number to 5.3.1.
	* *.txt:
	* doc/tablelist.html:

	* scripts/tablelistConfig.tcl: Fixed a bug related to the -hide row
	  configuration option, introduced in the previous release.

	* scripts/tablelistThemes.tcl: Extended the support for the native
	* scripts/tablelistWidget.tcl: "Aqua-blue" background for the header
	  label of the sort column to the Cocoa-based Tk patch levels 8.5.9
	  and above.

2011-07-02  Csaba Nemethi <csaba.nemethi@t-online.de>

	* CHANGES.txt:                 New value "photo7x7" for the -arrowstyle
	* scripts/mwutil.tcl:          configuration option; various further
	* scripts/tablelistConfig.tcl: improvements.
	* scripts/tablelistEdit.tcl:
	* scripts/tablelistImages.tcl:
	* scripts/tablelistSort.tcl:
	* scripts/tablelistThemes.tcl:
	* scripts/tablelistUtil.tcl:
	* scripts/tablelistWidget.tcl:

	* scripts/tclIndex: Newly generated.

	* doc/tablelistWidget.html: Updated to reflect the changes.

2011-06-28  Csaba Nemethi <csaba.nemethi@t-online.de>

	* scripts/tablelistUtil.tcl:   Solved some refresh problems on Mac OS X
	* scripts/tablelistWidget.tcl: Aqua.

2011-06-27  Csaba Nemethi <csaba.nemethi@t-online.de>

	* scripts/tablelistImages.tcl: Further improvements related to Mac OS X
	* scripts/tablelistUtil.tcl:   Aqua.

	* doc/aqua.png: Updated screenshot.

2011-06-26  Csaba Nemethi <csaba.nemethi@t-online.de>

	* CHANGES.txt:                 Improvements related to Mac OS X Aqua.
	* scripts/tablelistConfig.tcl:
	* scripts/tablelistImages.tcl:
	* scripts/tablelistSort.tcl:
	* scripts/tablelistThemes.tcl:
	* scripts/tablelistUtil.tcl:
	* scripts/tablelistWidget.tcl:

	* ../../examples/config.tcl:      Changed some colors.
	* ../../examples/config_tile.tcl:
	* ../../examples/option.tcl:
	* ../../examples/option_tile.tcl:
	* ../../examples/styles.tcl:
	* ../../examples/styles_tile.tcl:
